[BUG #7801] Manage qx.Mobile Carousel pagination label overflow

--- a/framework/source/resource/qx/mobile/scss/theme/flat/_styles.scss
+++ b/framework/source/resource/qx/mobile/scss/theme/flat/_styles.scss
@@ -148,9 +148,11 @@ $togglebutton-font-weight: normal;
 
 // Carousel
 
-$carousel-pagination-size: rem(8);
+$carousel-pagination-size: rem(10);
 $carousel-pagination-background: $color-5;
+$carousel-pagination-border-color: rgba($background-color,0.6);
 $carousel-pagination-active-background: $highlight-color;
+$carousel-pagination-active-border-color: $background-color;
 $carousel-pagination-border-radius: $carousel-pagination-size;
 $carousel-pagination-font-size: rem(1);
 $carousel-pagination-font-color: rgba(0,0,0,0);
