--- a/framework/source/resource/qx/mobile/scss/theme/indigo/_styles.scss
+++ b/framework/source/resource/qx/mobile/scss/theme/indigo/_styles.scss
@@ -148,9 +148,11 @@ $togglebutton-font-weight: bold;
 
 // Carousel
 
-$carousel-pagination-size:  rem(8);
-$carousel-pagination-background: $background-color;
+$carousel-pagination-size:  rem(10);
+$carousel-pagination-background: rgba($background-color,0.6);
+$carousel-pagination-border-color: rgba($background-color,0.6);
 $carousel-pagination-active-background: $highlight-color;
+$carousel-pagination-active-border-color: $background-color;
 $carousel-pagination-border-radius: $carousel-pagination-size;
 $carousel-pagination-font-size:  rem(1);
 $carousel-pagination-font-color: rgba(0,0,0,0);
